[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeit_decorator"
version = "2.1.2"
description = "A versatile timing decorator"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "jubnl", email = "jgunther021@gmail.com" }
]
maintainers = [
    { name = "jubnl", email = "jgunther021@gmail.com" }
]
dependencies = [
    "tabulate>=0.9.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

keywords = [
    "timing",
    "performance",
    "decorator",
    "profiling"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio"
]

[project.urls]
Homepage = "https://github.com/jubnl/timeit_decorator"
Repository = "https://github.com/jubnl/timeit_decorator"
Documentation = "https://github.com/jubnl/timeit_decorator/blob/main/README.md"
Issues = "https://github.com/jubnl/timeit_decorator/issues"

[project.scripts]
timeit_decorator = "timeit_decorator.__main__:main"

[pytest]
markers = "asyncio"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.setuptools.exclude-package-data]
"tests" = ["*"]
"examples" = ["*"]
