[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeit_decorator"
version = "2.2.3"
description = "A versatile timing decorator"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "jubnl", email = "jgunther021@gmail.com" }
]
maintainers = [
    { name = "jubnl", email = "jgunther021@gmail.com" }
]
dependencies = [
    "tabulate>=0.9.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]

keywords = [
    "timing",
    "performance",
    "decorator",
    "profiling"
]

[project.urls]
Homepage = "https://github.com/jubnl/timeit_decorator"
Repository = "https://github.com/jubnl/timeit_decorator"
Documentation = "https://github.com/jubnl/timeit_decorator/blob/main/README.md"
Issues = "https://github.com/jubnl/timeit_decorator/issues"

[project.scripts]
timeit_decorator = "timeit_decorator.__main__:main"

[project.optional-dependencies]
dev = [
    "pysonar>=1.3.0.4086",
    "pytest",
    "pytest-cov",
    "pytest-asyncio"
]

[pytest]
markers = "asyncio"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.setuptools.exclude-package-data]
"tests" = ["*"]
"examples" = ["*"]
